# School-Project---PUDO

./: .envrc  .gitignore  CLAUDE.md  GEMINI.md  KURULUM_REHBERI.md  PROJECT_REFERENCE.md  README.md
Training Folder/: test_image_publisher.py  (+1 more)
src/navigation_2025/: Behavior_tree.xml  CMakeLists.txt  README.md  bt_custom_nodes_plugin.xml  lane_guidance_layer_plugin.xml  package.xml
src/navigation_2025/config/: bus_stops.yaml  dual_ekf_navsat.yaml  ekf.yaml  imu_filter.yaml  keepout_nav2_params.yaml  keepout_params.yaml  nav2_params.yaml  rviz2.rviz
src/navigation_2025/docs/: LANE_GUIDANCE_LAYER.md
src/navigation_2025/include/navigation_2025/: bt_custom_nodes.hpp  lane_guidance_layer.hpp
src/navigation_2025/launch/: bringup.launch.py  ekf_localization.launch.py  full_nav2.launch.py  keepout_full_nav2.launch.py  keepout_localization_launch.py  keepout_navigation_launch.py  navigation.launch.py
src/navigation_2025/maps/: keepout_teknofestObstacle.pgm  teknofestObstacle.pgm  teknofestObstacle.yaml
src/navigation_2025/scripts/: lane_to_costmap_bridge.py  navigate_waypoints.py
src/navigation_2025/src/: bt_custom_nodes_plugin.cpp  lane_guidance_layer.cpp
src/otagg_vision_2026/otagg_vision/: CMakeLists.txt  package.xml
src/otagg_vision_2026/otagg_vision/lib/: yolopv2_utils.py
src/otagg_vision_2026/otagg_vision/scripts/: bus_stop_loop_node.py  camera_node.py  test_image_publisher.py  traffic_state_manager_node.py  velocity_override_node.py  yolopv2_node.py  yolov12_node.py
src/simulation_2025/: CMakeLists.txt  README.md  package.xml
src/simulation_2025/config/: ign_bridge.yaml
src/simulation_2025/launch/: robot_spawner.launch.py  robot_spawner_gercek.launch.py  teknofest_IGN.launch.py
src/simulation_2025/meshes/: otagg_car_base.dae  otagg_car_wheel.dae  robotaksi.dae
src/simulation_2025/models/: TeknofestWORLDV2.sdf  TeknofestWORLDV_no_tent.sdf  deneme.sdf  teknofestWORLD.sdf
src/simulation_2025/models/bariyer/: model.config  model.sdf
src/simulation_2025/models/beyaz_bariyer/: model.config  model.sdf
src/simulation_2025/models/beyaz_bariyer/meshes/: white.dae
src/simulation_2025/models/donel_kavsak_levha/: model.config  model.sdf
src/simulation_2025/models/donel_kavsak_levha/meshes/: donel_kavsak_levha.dae
src/simulation_2025/models/dur_ve_park_yasak_levha/: model.config  model.sdf
src/simulation_2025/models/dur_ve_park_yasak_levha/meshes/: dur_ve_park_yasak_levha.dae
src/simulation_2025/models/durak_levha/: model.config  model.sdf
src/simulation_2025/models/durak_levha/meshes/: durak_levha.dae
src/simulation_2025/models/engelli_park_levha/: model.config  model.sdf
src/simulation_2025/models/engelli_park_levha/meshes/: engelli_park_levha.dae
src/simulation_2025/models/girisi_olmayan_yol_levha/: model.config  model.sdf
src/simulation_2025/models/girisi_olmayan_yol_levha/meshes/: girisi_olmayan_yol_levha.dae
src/simulation_2025/models/iki_yonlu_levha/: model.config  model.sdf
src/simulation_2025/models/iki_yonlu_levha/meshes/: iki_yonlu_levha.dae
src/simulation_2025/models/ileri_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/ileri_mecburi_levha/meshes/: ileri_mecburi_levha.dae
src/simulation_2025/models/ileri_sag_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/ileri_sag_mecburi_levha/meshes/: ileri_sag_mecburi_levha.dae
src/simulation_2025/models/ileri_sol_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/ileri_sol_mecburi_levha/meshes/: ileri_sol_mecburi_levha.dae
src/simulation_2025/models/ileri_veya_saga_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/ileri_veya_saga_mecburi_levha/meshes/: ileri_veya_saga_mecburi_levha.dae
src/simulation_2025/models/ileri_veya_sola_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/ileri_veya_sola_mecburi_levha/meshes/: ileri_veya_sola_mecburi_levha.dae
src/simulation_2025/models/kirmizi_bariyer/: model.config  model.sdf
src/simulation_2025/models/kirmizi_bariyer/meshes/: red.dae
src/simulation_2025/models/park_levha/: model.config  model.sdf
src/simulation_2025/models/park_levha/meshes/: park_levha.dae
src/simulation_2025/models/park_yapilmaz_levha/: model.config  model.sdf
src/simulation_2025/models/park_yapilmaz_levha/meshes/: park_yapilmaz_levha.dae
src/simulation_2025/models/park_yasak2_levha/: model.config  model.sdf
src/simulation_2025/models/park_yasak2_levha/meshes/: park_yasak2_levha.dae
src/simulation_2025/models/sag_donulmez_levha/: model.config  model.sdf
src/simulation_2025/models/sag_donulmez_levha/meshes/: sag_donulmez_levha.dae
src/simulation_2025/models/sag_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/sag_mecburi_levha/meshes/: sag_mecburi_levha.dae
src/simulation_2025/models/sol_mecburi_levha/: model.config  model.sdf
src/simulation_2025/models/sol_mecburi_levha/meshes/: sol_mecburi_levha.dae
src/simulation_2025/models/sola_donulmez_levha/: model.config  model.sdf
src/simulation_2025/models/sola_donulmez_levha/meshes/: sola_donulmez_levha.dae
src/simulation_2025/models/standing_person/: model.sdf
src/simulation_2025/models/stop_light/: model.sdf
src/simulation_2025/models/teknofest_zemin/: model.config  model.sdf
src/simulation_2025/models/teknofest_zemin/meshes/: teknofestharitav2.dae
src/simulation_2025/models/teknofesttunel/: model.config  model.sdf
src/simulation_2025/models/teknofesttunel/meshes/: teknofesttunel.dae
src/simulation_2025/models/yaya_gecidi_levha/: model.config  model.sdf
src/simulation_2025/scripts/: cmd_vel_publisher.py  game_pad.py  gta_controller.py  traffic_light.py
src/simulation_2025/urdf/: camera.xacro  common_properties.xacro  depth.xacro  gps.xacro  imu.xacro  mag.xacro  otagg_car.urdf.xacro  ray.xacro  teslabot.urdf.xacro
src/simulation_2025/urdf_gercek/: camera.xacro  depth.xacro  imu.xacro  mag.xacro  otagg_car.urdf.xacro  otagg_car_gazebo.xacro  ray.xacro
src/tests/: CMakeLists.txt  package.xml  robot_diagnostics.py  robot_test.sh  validate_config.py
(+11 files in other folders)
