<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_2025</name>
  <version>0.0.0</version>
  <description>Simulation_2025 Package.xml file</description>
  <maintainer email="032290062@ogr.uludag.edu.tr">Emir Ucar</maintainer>
  <license>Apache 2.0</license>
  <author>Emir Ucar</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ros_gz</depend>
  <depend>robot_state_publisher</depend>
  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/share/simulation_2025/models"/>
  </export>
</package>
